added iot build for ua locale in i18n

--- a/denmacundefined/angular.json
+++ b/denmacundefined/angular.json
@@ -39,7 +39,21 @@
               "i18nFile": "src/i18n/messages.ua.xlf",
               "i18nFormat": "xlf",
               "i18nLocale": "ua",
-              "i18nMissingTranslation": "error"
+              "i18nMissingTranslation": "error",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
             },
             "production": {
               "fileReplacements": [
