--- a/denmacundefined/package.json
+++ b/denmacundefined/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod && ng build --configuration=ua --prod",
+    "start": "npm install && ng serve",
+    "build": "ng build --prod && ng build --configuration=ua",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
