--- a/denmacundefined/angular.json
+++ b/denmacundefined/angular.json
@@ -53,7 +53,8 @@
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "baseHref": "/ua/"
             },
             "production": {
               "fileReplacements": [
