--- a/denmacundefined/angular.json
+++ b/denmacundefined/angular.json
@@ -27,9 +27,17 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/magnific-popup/dist/magnific-popup.css",
+              "src/assets/css/creative.min.css",
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/jquery-easing/dist/jquery.easing.1.3.umd.min.js",
+              "node_modules/magnific-popup/dist/jquery.magnific-popup.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
