--- a/denmacundefined/angular.json
+++ b/denmacundefined/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/magnific-popup/dist/magnific-popup.css",
               "src/assets/css/creative.min.css",
