--- a/denmacundefined/package.json
+++ b/denmacundefined/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.4.0",
     "jquery-easing": "0.0.1",
     "magnific-popup": "^1.1.0",
+    "ngx-bootstrap": "^4.1.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
