--- a/denmacundefined/package.json
+++ b/denmacundefined/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "npm install && ng serve",
     "build": "ng build --prod && ng build --configuration=ua",
-    "test": "ng test",
+    "lint": "ng lint",
     "i18n": "ng xi18n --output-path=i18n"
   },
   "private": true,
