--- a/assets/config.json
+++ b/assets/config.json
@@ -10,5 +10,5 @@
         "photoNumber":2
     }],
 "actions": [{"text": "Smart Place - JavaScript based IoT Platform for DIY ideas.",
-    "link": "http://smart-place.denmacundefined.pp.ua"}
+    "link": "http://smart-place.denmacundefined.pp.ua"}, {"text": "Local server with mbills solution", "link": "http://ip.denmacundefined.pp.ua"}
 ]}
