--- a/ua/assets/config.json
+++ b/ua/assets/config.json
@@ -9,6 +9,6 @@
         "link":"smart-place-server.denmacundefined.pp.ua",
         "photoNumber":2
     }],
-"actions": [{"text": "Smart Place - JavaScript based IoT Platform for DIY ideas.",
-    "link": "http://smart-place.denmacundefined.pp.ua"}
+"actions": [{"text": "Smart Place - IoT Платформа на JavaScript для DIY ідей.",
+    "link": "http://smart-place.denmacundefined.pp.ua"}, {"text": "Локальний сервер з mbills платформою", "link": "http://ip.denmacundefined.pp.ua"}
 ]}
