--- a/assets/config.json
+++ b/assets/config.json
@@ -10,5 +10,5 @@
         "photoNumber":2
     }],
 "actions": [{"text": "Smart Place",
-    "link": "http://smart-place.denmacundefined.pp.ua"}, {"text": "MBills", "link": "http://ip.denmacundefined.pp.ua"}
+    "link": "http://smart-place.denmacundefined.pp.ua"}, {"text": "Mbills Server", "link": "http://ip.denmacundefined.pp.ua"}
 ]}
