--- a/assets/config.json
+++ b/assets/config.json
@@ -5,10 +5,10 @@
     },{"name":"Smart Place Guard",
         "link":"smart-place-guard.denmacundefined.pp.ua",
         "photoNumber":3
-    },{"name":"Smart Place Server",
-        "link":"smart-place-server.denmacundefined.pp.ua",
+    },{"name":"MBills Server",
+        "link":"http://ip.denmacundefined.pp.ua",
         "photoNumber":2
     }],
 "actions": [{"text": "Smart Place",
-    "link": "http://smart-place.denmacundefined.pp.ua"}, {"text": "Mbills Server", "link": "http://ip.denmacundefined.pp.ua"}
+    "link": "http://smart-place.denmacundefined.pp.ua"}
 ]}
