--- a/assets/config.json
+++ b/assets/config.json
@@ -9,6 +9,6 @@
         "link":"ip.denmacundefined.pp.ua",
         "photoNumber":2
     }],
-"actions": [{"text": "Smart Place",
+"actions": [{"text": "Smart Place Platform",
     "link": "http://smart-place.denmacundefined.pp.ua"}
 ]}
