--- a/assets/config.json
+++ b/assets/config.json
@@ -10,5 +10,7 @@
         "photoNumber":2
     }],
 "actions": [{"text": "Smart Place Platform",
-    "link": "http://smart-place.denmacundefined.pp.ua"}
+    "link": "https://smart-place.denmacundefined.pp.ua"},
+    {"text": "Smart u",
+    "link": "https://ebanoe.it"}
 ]}
