--- a/assets/config.json
+++ b/assets/config.json
@@ -11,6 +11,6 @@
     }],
 "actions": [{"text": "Smart Place",
     "link": "https://smart-place.denmacundefined.pp.ua"},
-    {"text": "ebanoe.it",
+    {"text": "Beautiful IT",
     "link": "https://ebanoe.it"}
 ]}
