--- a/assets/config.json
+++ b/assets/config.json
@@ -6,7 +6,7 @@
         "link":"smart-place-guard.denmacundefined.pp.ua",
         "photoNumber":3
     },{"name":"Smart Place Server",
-        "link":"smart-place-server.denmacundefined.pp.ua",
+        "link":"ip.denmacundefined.pp.ua",
         "photoNumber":2
     }],
 "actions": [
