--- a/assets/config.json
+++ b/assets/config.json
@@ -8,6 +8,9 @@
     },{"name":"Smart Place Server",
         "link":"ip.denmacundefined.pp.ua",
         "photoNumber":2
+   },{"name":"Dash cam",
+        "link":"gopro-2014-dash-cam.denmacundefined.pp.ua",
+        "photoNumber":4
     }],
 "actions": [
     {"text": "Smart Place",
