--- a/assets/config.json
+++ b/assets/config.json
@@ -8,7 +8,7 @@
     },{"name":"Smart Place Server",
         "link":"ip.denmacundefined.pp.ua",
         "photoNumber":2
-   },{"name":"Dash cam",
+   },{"name":"Dash Cam from GoPro",
         "link":"gopro-2014-dash-cam.denmacundefined.pp.ua",
         "photoNumber":4
     }],
