--- a/assets/config.json
+++ b/assets/config.json
@@ -12,6 +12,6 @@
 "actions": [
     {"text": "Smart Place",
     "link": "https://smart-place.denmacundefined.pp.ua"},
-    {"text": "Smart Place Server",
+    {"text": "Home Server",
     "link": "ip.denmacundefined.pp.ua"}
 ]}
