--- a/assets/config.json
+++ b/assets/config.json
@@ -13,5 +13,5 @@
     {"text": "Smart Place",
     "link": "https://smart-place.denmacundefined.pp.ua"},
     {"text": "Home Server",
-    "link": "ip.denmacundefined.pp.ua"}
+    "link": "http://ip.denmacundefined.pp.ua"}
 ]}
