--- a/assets/config.json
+++ b/assets/config.json
@@ -8,7 +8,7 @@
     },{"name":"Dash Cam from GoPro",
         "link":"gopro-2014-dash-cam.denmacundefined.pp.ua",
         "photoNumber":4
-   },{"name":"Pet/'s server",
+   },{"name":"Pet\'s server",
         "link":"ip.denmacundefined.pp.ua",
         "photoNumber":5
     }],
