--- a/assets/config.json
+++ b/assets/config.json
@@ -11,7 +11,7 @@
    },{"name":"Pet server",
         "link":"ip.denmacundefined.pp.ua",
         "photoNumber":5
-   },{"name":"shutdown-internet-checker",
+   },{"name":"Shutdown & internet checker",
         "link":"shutdown-internet-checker.denmacundefined.pp.ua",
         "photoNumber":2
    },{"name":"MBills",
